# eoddata

./: .gitignore  LICENSE  README.md  debug_test.py  publish.sh  publish2PyPI.sh  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
src/eoddata/: __init__.py  accounting.py  client.py  exceptions.py
src/eoddata/api/: __init__.py  base.py  corporate.py  exchanges.py  fundamentals.py  metadata.py  quotes.py  symbols.py  technicals.py
tests/: test_accounting.py  test_accounting_comprehensive.py  test_api_modules.py  test_client.py  test_comprehensive.py  test_init.py  test_integration.py
