[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eoddata-api"
version = "0.1.0"
description = "Python client package for the EODData market data REST API."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mike Quest", email = "eoddata-api@vrontier.org" }]
keywords = ["finance", "markets", "eod", "historical-data", "api", "stocks", "eoddata"]
dependencies = [
    "requests>=2.32.0,<3",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/vrontier/eoddata-api"
Repository = "https://github.com/vrontier/eoddata-api"
Issues = "https://github.com/vrontier/eoddata-api/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-mock",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.package-data]
eoddata = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["eoddata*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=eoddata",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/eoddata"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
